modified index detail message

--- a/station_detail.html
+++ b/station_detail.html
@@ -386,7 +386,7 @@
 								<div class="row ">
 									<ul class="pager pager-rounded">
 										<li class="previous">
-											<a href="station.html"><i class="demo-psi-arrow-left"></i> 返回</a>
+											<a href="javascript:history.go(-1)"><i class="demo-psi-arrow-left"></i> 返回</a>
 										</li>
 										<!--<li class="next">
 							<a href="#">Next <i class="demo-psi-arrow-right"></i></a>
