--- a/taskProgress_detail.html
+++ b/taskProgress_detail.html
@@ -371,7 +371,7 @@
                             <div class="row ">
                                 <ul class="pager pager-rounded">
                                     <li class="previous">
-                                        <a href="taskProgress.html"><i class="demo-psi-arrow-left"></i> 返回</a>
+                                        <a href="javascript:history.go(-1)"><i class="demo-psi-arrow-left"></i> 返回</a>
                                     </li>
                                 </ul>
                                 <div class="col-lg-10 col-lg-offset-1 ">
