--- a/system_detail.html
+++ b/system_detail.html
@@ -528,7 +528,7 @@
 					<div class="row ">
 						<ul class="pager pager-rounded">
 							<li class="previous">
-								<a href="system.html"><i class="demo-psi-arrow-left"></i> 返回</a>
+								<a href="javascript:history.go(-1)"><i class="demo-psi-arrow-left"></i> 返回</a>
 							</li>
 							<!--<li class="next">
 								<a href="#">Next <i class="demo-psi-arrow-right"></i></a>
