--- a/harvest.html
+++ b/harvest.html
@@ -302,6 +302,20 @@
                 </div>
             </div>
         </div>
+        <div id="delete_modal" class="modal fade" tabindex="-1">
+            <div class="modal-dialog modal-sm">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal"><i class="pci-cross pci-circle"></i>
+                        </button>
+                    </div>
+                    <div class="modal-body" style="text-align: center">
+                        <h3 id="delete_h3">是否删除</h3>
+                        <button id="delete_btn" class="btn btn-success">确定</button>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div id="demo-sm-modal" class="modal fade" tabindex="-1">
             <div class="modal-dialog modal-sm">
                 <div class="modal-content">
@@ -341,8 +355,7 @@
                                             <span class="pull-right dropdown-toggle">
                                                 <i class="dropdown-caret"></i>
                                             </span>
-                                        <p class="mnp-name">张三</p>
-                                        <span class="mnp-desc">aaron.cha@themeon.net</span>
+                                        <p class="mnp-name"></p>
                                     </a>
                                 </div>
                                 <div id="profile-nav" class="collapse list-group bg-trans">
@@ -536,43 +549,7 @@
 
     </div>
 
-    <!-- FOOTER -->
-    <!--===================================================-->
-    <footer id="footer">
 
-        <!-- Visible when footer positions are fixed -->
-        <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-        <div class="show-fixed pull-right">
-            You have <a href="#" class="text-bold text-main"><span class="label label-danger">3</span> pending
-            action.</a>
-        </div>
-
-
-        <!-- Visible when footer positions are static -->
-        <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-        <div class="hide-fixed pull-right pad-rgt">
-            14GB of <strong>512GB</strong> Free.
-        </div>
-
-
-        <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-        <!-- Remove the class "show-fixed" and "hide-fixed" to make the content always appears. -->
-        <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-
-        <p class="pad-lft">&#0169; 2016 Your Company</p>
-
-
-    </footer>
-    <!--===================================================-->
-    <!-- END FOOTER -->
-
-
-    <!-- SCROLL PAGE BUTTON -->
-    <!--===================================================-->
-    <button class="scroll-top btn">
-        <i class="pci-chevron chevron-up"></i>
-    </button>
-    <!--===================================================-->
 
 
 </div>
