add register.html and modified css

--- a/download.html
+++ b/download.html
@@ -144,11 +144,13 @@
 
             <!--Page Title-->
             <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-
+            <div id="page-title">
+                    <h1 class="page-header text-overflow">下载中心</h1>
+                </div>
 
                 <!--Custom Toolbar-->
                 <!--===================================================-->
-
+                <div id="page-content">
                 <!--===================================================-->
                <div class="panel">
                    <div class="panel-heading">
@@ -169,6 +171,7 @@
                               data-pagination="true" data-show-pagination-switch="true">
                        </table>
                    </div>
+               </div>
                </div>
            </div>
         <!--===================================================-->
@@ -200,7 +203,7 @@
                                     </a>
                                 </div>
                                 <div id="profile-nav" class="collapse list-group bg-trans">
-                                    <a href="#" class="list-group-item">
+                                    <a href="personal_profile.html" class="list-group-item">
                                         <i class="demo-pli-male icon-lg icon-fw"></i> 个人中心
                                     </a>
                                     <a href="#" class="list-group-item">
