--- a/regulation.html
+++ b/regulation.html
@@ -160,10 +160,12 @@
             <!--Page Title-->
             <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 
-
+            <div id="page-title">
+                    <h1 class="page-header text-overflow">规章制度</h1>
+                </div>
             <!--Custom Toolbar-->
             <!--===================================================-->
-
+            <div id="page-content">
             <!--===================================================-->
             <div class="panel">
                 <div class="panel-heading">
@@ -205,6 +207,7 @@
 
                     </table>
                 </div>
+            </div>
             </div>
         </div>
         <!--===================================================-->
@@ -389,7 +392,7 @@
                                     </a>
                                 </div>
                                 <div id="profile-nav" class="collapse list-group bg-trans">
-                                    <a href="#" class="list-group-item">
+                                    <a href="personal_profile.html" class="list-group-item">
                                         <i class="demo-pli-male icon-lg icon-fw"></i> 个人中心
                                     </a>
                                     <a href="#" class="list-group-item">
