--- a/task.html
+++ b/task.html
@@ -162,11 +162,13 @@
 
             <!--Page Title-->
             <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-
+            <div id="page-title">
+                    <h1 class="page-header text-overflow">工作任务</h1>
+                </div>
 
             <!--Custom Toolbar-->
             <!--===================================================-->
-
+            <div id="page-content">
             <!--===================================================-->
             <div class="panel">
                 <div class="panel-heading">
@@ -174,7 +176,7 @@
                 </div>
                 <div class="panel-body">
                     <div id="f">
-                        <div class="panel-heading"><h3>工作任务</h3></div>
+                       
                         <div id="fgzrw">
                         </div>
                         <table id="demo-custom-toolbar" class="demo-add-niftycheck" data-toggle="table"
@@ -208,6 +210,7 @@
                         </table>
                     </div>
                 </div>
+            </div>
             </div>
         </div>
         <!--===================================================-->
@@ -424,7 +427,7 @@
                                     </a>
                                 </div>
                                 <div id="profile-nav" class="collapse list-group bg-trans">
-                                    <a href="#" class="list-group-item">
+                                    <a href="personal_profile.html" class="list-group-item">
                                         <i class="demo-pli-male icon-lg icon-fw"></i> 个人中心
                                     </a>
                                     <a href="#" class="list-group-item">
