--- a/test_manager.html
+++ b/test_manager.html
@@ -186,7 +186,7 @@
                                         <li><a href="#demo-tabs-box-4" data-toggle="tab" id="title">考评汇总</a></li>
                                     </ul>
                                 </div>
-                                <h3 class="panel-title">Panel With tabs</h3>
+                                <h3 class="panel-title">考评管理</h3>
                             </div>
 
                             <!--Panel body-->
@@ -546,7 +546,7 @@
                                     </a>
                                 </div>
                                 <div id="profile-nav" class="collapse list-group bg-trans">
-                                    <a href="#" class="list-group-item">
+                                    <a href="personal_profile.html" class="list-group-item">
                                         <i class="demo-pli-male icon-lg icon-fw"></i> 个人中心
                                     </a>
                                     <a href="#" class="list-group-item">
