--- a/activity.html
+++ b/activity.html
@@ -153,11 +153,13 @@
         <!--CONTENT CONTAINER-->
         <!--===================================================-->
            <div id="content-container">
-
+                <div id="page-title">
+                        <h1 class="page-header text-overflow">重大活动</h1>
+                </div>
             <!--Page Title-->
             <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 
-
+                 <div id="page-content">
                 <!--Custom Toolbar-->
                 <!--===================================================-->
 
@@ -186,6 +188,7 @@
                    </div>
                </div>
            </div>
+        </div>
         <!--===================================================-->
         <!--END CONTENT CONTAINER-->
 
@@ -345,7 +348,7 @@
                                     </a>
                                 </div>
                                 <div id="profile-nav" class="collapse list-group bg-trans">
-                                    <a href="#" class="list-group-item">
+                                    <a href="personal_profile.html" class="list-group-item">
                                         <i class="demo-pli-male icon-lg icon-fw"></i> 个人中心
                                     </a>
                                     <a href="#" class="list-group-item">
