--- a/dynamic.html
+++ b/dynamic.html
@@ -157,11 +157,13 @@
 
             <!--Page Title-->
             <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-
+            <div id="page-title">
+                    <h1 class="page-header text-overflow">体系动态</h1>
+             </div>
 
                 <!--Custom Toolbar-->
                 <!--===================================================-->
-
+                <div id="page-content">
                 <!--===================================================-->
                <div class="panel">
                    <div class="panel-heading">
@@ -185,6 +187,7 @@
                               data-pagination="true" data-show-pagination-switch="true">
                        </table>
                    </div>
+               </div>
                </div>
            </div>
         <!--===================================================-->
@@ -353,7 +356,7 @@
                                     </a>
                                 </div>
                                 <div id="profile-nav" class="collapse list-group bg-trans">
-                                    <a href="#" class="list-group-item">
+                                    <a href="personal_profile.html" class="list-group-item">
                                         <i class="demo-pli-male icon-lg icon-fw"></i> 个人中心
                                     </a>
                                     <a href="#" class="list-group-item">
