--- a/harvest.html
+++ b/harvest.html
@@ -159,11 +159,13 @@
 
             <!--Page Title-->
             <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-
+            <div id="page-title">
+                    <h1 class="page-header text-overflow">重大成果</h1>
+                </div>
 
             <!--Custom Toolbar-->
             <!--===================================================-->
-
+            <div id="page-content">
             <!--===================================================-->
             <div class="panel">
                 <div class="panel-heading">
@@ -189,6 +191,7 @@
 
                     </table>
                 </div>
+            </div>
             </div>
         </div>
         <!--===================================================-->
@@ -359,7 +362,7 @@
                                     </a>
                                 </div>
                                 <div id="profile-nav" class="collapse list-group bg-trans">
-                                    <a href="#" class="list-group-item">
+                                    <a href="personal_profile.html" class="list-group-item">
                                         <i class="demo-pli-male icon-lg icon-fw"></i> 个人中心
                                     </a>
                                     <a href="#" class="list-group-item">
