--- a/notice.html
+++ b/notice.html
@@ -173,11 +173,13 @@
 
             <!--Page Title-->
             <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-
+            <div id="page-title">
+                    <h1 class="page-header text-overflow">通知公告</h1>
+            </div>
 
             <!--Custom Toolbar-->
             <!--===================================================-->
-
+            <div id="page-content">
             <!--===================================================-->
             <div class="panel">
                 <div class="panel-heading">
@@ -201,6 +203,7 @@
                            data-pagination="true" data-show-pagination-switch="true">
                     </table>
                 </div>
+            </div>
             </div>
         </div>
         <!--===================================================-->
@@ -361,7 +364,7 @@
                                     </a>
                                 </div>
                                 <div id="profile-nav" class="collapse list-group bg-trans">
-                                    <a href="#" class="list-group-item">
+                                    <a href="personal_profile.html" class="list-group-item">
                                         <i class="demo-pli-male icon-lg icon-fw"></i> 个人中心
                                     </a>
                                     <a href="#" class="list-group-item">
