--- a/activity_detail.html
+++ b/activity_detail.html
@@ -308,7 +308,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li>
+                                <li class="active-link">
                                     <a href="activity.html">
                                         <i class="fa fa-life-ring"></i>
                                         <span class="menu-title">
