--- a/download.html
+++ b/download.html
@@ -357,7 +357,7 @@
                                         </a>
                                     </li>
                                     <!--Menu list item-->
-                                    <li>
+                                    <li class="active-link">
                                         <a href="download.html">
                                             <i class="demo-psi-download-from-cloud"></i>
                                             <span class="menu-title">
