--- a/dynamic.html
+++ b/dynamic.html
@@ -463,7 +463,7 @@
                                         </a>
                                     </li>
                                     <!--Menu list item-->
-                                    <li>
+                                    <li class="active-link">
                                         <a href="dynamic.html">
                                             <i class="fa fa-table"></i>
                                             <span class="menu-title">
