--- a/harvest.html
+++ b/harvest.html
@@ -439,7 +439,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li>
+                                <li class="active-link">
                                     <a href="harvest.html">
                                         <i class="fa fa-mortar-board"></i>
                                         <span class="menu-title">
