--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
                                 <ul id="mainnav-menu" class="list-group">
     
                                     <!--Menu list item-->
-                                    <li>
+                                    <li class="active-link">
                                         <a href="index.html">
                                             <i class="demo-psi-home"></i>
                                             <span class="menu-title">
@@ -784,6 +784,7 @@
             }
         });
     });
+
 </script>
 
 </html>
