--- a/laboratory.html
+++ b/laboratory.html
@@ -381,7 +381,7 @@
                                     </li>
     
                                     <!--Menu list item-->
-                                    <li style="display: none" id="lab">
+                                    <li  class="active-link" style="display: none" id="lab">
                                         <a href="laboratory.html">
                                             <i class="fa fa-university"></i>
                                             <span class="menu-title">
