--- a/regulation_detail.html
+++ b/regulation_detail.html
@@ -358,7 +358,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li>
+                                <li class="active-link">
                                     <a href="regulation.html">
                                         <i class="fa fa-book"></i>
                                         <span class="menu-title">
