--- a/station.html
+++ b/station.html
@@ -388,7 +388,7 @@
                                     </li>
     
                                     <!--Menu list item-->
-                                    <li style="display: none" id="sta">
+                                    <li class="active-link" style="display: none" id="sta">
                                         <a href="station.html">
                                             <i class="demo-psi-office"></i>
                                             <span class="menu-title">
