--- a/system.html
+++ b/system.html
@@ -349,7 +349,7 @@
                                     </li>
     
                                     <!--Menu list item-->
-                                    <li style="display: none" id="system">
+                                    <li  class="active-link" style="display: none" id="system">
                                         <a href="system.html">
                                             <i class="demo-psi-repair"></i>
                                             <span class="menu-title">
