--- a/taskProgress_detail.html
+++ b/taskProgress_detail.html
@@ -394,7 +394,7 @@
                                 </li>
 
                                 <!--Menu list item-->
-                                <li id="taskProgress">
+                                <li  class="active-link" id="taskProgress">
                                     <a href="taskProgress.html">
                                         <i class="fa fa-spinner"></i>
                                         <span class="menu-title">
