--- a/user.html
+++ b/user.html
@@ -263,7 +263,7 @@
                                     </li>
     
                                     <!--Menu list item-->
-                                    <li style="display: none" id="person">
+                                    <li class="active-link" style="display: none" id="person">
                                         <a href="user.html">
                                             <i class="fa fa-users"></i>
                                             <span class="menu-title">
