--- a/activity.html
+++ b/activity.html
@@ -415,7 +415,7 @@
                                     </li>
     
                                     <!--Menu list item-->
-                                    <li>
+                                    <li class="active-link">
                                         <a href="activity.html">
                                             <i class="fa fa-life-ring"></i>
                                             <span class="menu-title">
