--- a/notice.html
+++ b/notice.html
@@ -462,7 +462,7 @@
                                     </li>
     
                                     <!--Menu list item-->
-                                    <li>
+                                    <li class="active-link">
                                         <a href="notice.html">
                                             <i class="fa fa-bullhorn"></i>
                                             <span class="menu-title">
