--- a/task_detail.html
+++ b/task_detail.html
@@ -400,7 +400,7 @@
                                     </a>
                                 </li>
                                 <!--Menu list item-->
-                                <li>
+                                <li class="active-link">
                                     <a href="task.html">
                                         <i class="fa fa-list-ol"></i>
                                         <span class="menu-title">
