--- a/test_manager.html
+++ b/test_manager.html
@@ -691,7 +691,7 @@
                                         </a>
                                     </li>
                                     <!--Menu list item-->
-                                    <li style="display: none" id="test">
+                                    <li  class="active-link" style="display: none" id="test">
                                         <a href="test_manager.html">
                                             <i class="fa fa-magnet"></i>
                                             <span class="menu-title">
