--- a/personal_profile.html
+++ b/personal_profile.html
@@ -428,13 +428,16 @@
                                             <a href="personal_profile.html" class="list-group-item">
                                                 <i class="demo-pli-male icon-lg icon-fw"></i> 个人中心
                                             </a>
-                                            <a href="#" class="list-group-item">
-                                                <i class="demo-pli-gear icon-lg icon-fw"></i> 设置
+                                            <a href="#" class="list-group-item" id="lab_control">
+                                                <i class="demo-pli-gear icon-lg icon-fw"></i> 研究室管理
+                                            </a>
+                                            <a href="#" class="list-group-item" id="sta_control">
+                                                <i class="demo-pli-gear icon-lg icon-fw"></i> 实验站管理
                                             </a>
                                             <a href="#" class="list-group-item">
                                                 <i class="demo-pli-information icon-lg icon-fw"></i> 帮助
                                             </a>
-                                            <a href="#" class="list-group-item">
+                                            <a href="#" class="list-group-item" id="logiout">
                                                 <i class="demo-pli-unlock icon-lg icon-fw"></i> 登出
                                             </a>
                                         </div>
@@ -587,15 +590,7 @@
                                                 </span>
                                             </a>
                                         </li>
-                                        <!--Menu list item-->
-                                        <li>
-                                            <a href="help.html">
-                                                <i class="fa fa-question-circle"></i>
-                                                <span class="menu-title">
-                                                    <strong>帮助</strong>
-                                                </span>
-                                            </a>
-                                        </li>
+
 
 
 
