--- a/user.html
+++ b/user.html
@@ -239,6 +239,9 @@
                                     <a href="personal_profile.html" class="list-group-item">
                                         <i class="demo-pli-male icon-lg icon-fw"></i> 个人中心
                                     </a>
+                                    <a href="#" class="list-group-item" id="sys_control">
+                                        <i class="demo-pli-gear icon-lg icon-fw"></i> 体系管理
+                                    </a>
                                     <a href="#" class="list-group-item" id="lab_control">
                                         <i class="demo-pli-gear icon-lg icon-fw"></i> 研究室管理
                                     </a>
