help.html and  personal

--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
                                         <a href="#" class="list-group-item" id="sta_control">
                                             <i class="demo-pli-gear icon-lg icon-fw"></i> 实验站管理
                                         </a>
-                                        <a href="#" class="list-group-item">
+                                        <a href="help.html" class="list-group-item">
                                             <i class="demo-pli-information icon-lg icon-fw"></i> 帮助
                                         </a>
                                         <a href="#" class="list-group-item" id="logiout">
