update person_profile and person_add

--- a/index.html
+++ b/index.html
@@ -562,8 +562,8 @@
                                         </a>
                                     </div>
                                     <div id="profile-nav" class="collapse list-group bg-trans">
-                                        <a href="personal_profile.html" class="list-group-item">
-                                            <i class="demo-pli-male icon-lg icon-fw"></i> 个人中心
+                                        <a href="#" class="list-group-item" id="personal_profile">
+                                                <i class="demo-pli-male icon-lg icon-fw"></i> 个人中心
                                         </a>
                                         <a href="#" class="list-group-item" id="sys_control">
                                             <i class="demo-pli-gear icon-lg icon-fw"></i> 体系管理
