--- a/subTask_detail.html
+++ b/subTask_detail.html
@@ -272,9 +272,9 @@
                                     </a>
                                 </div>
                                 <div id="profile-nav" class="collapse list-group bg-trans">
-                                    <a href="personal_profile.html" class="list-group-item">
-                                        <i class="demo-pli-male icon-lg icon-fw"></i> 个人中心
-                                    </a>
+                                        <a href="#" class="list-group-item" id="personal_profile">
+                                                <i class="demo-pli-male icon-lg icon-fw"></i> 个人中心
+                                            </a>
                                     <a href="#" class="list-group-item" id="sys_control">
                                         <i class="demo-pli-gear icon-lg icon-fw"></i> 体系管理
                                     </a>
@@ -284,7 +284,7 @@
                                     <a href="#" class="list-group-item" id="sta_control">
                                         <i class="demo-pli-gear icon-lg icon-fw"></i> 实验站管理
                                     </a>
-                                    <a href="#" class="list-group-item">
+                                    <a href="help.html" class="list-group-item">
                                         <i class="demo-pli-information icon-lg icon-fw"></i> 帮助
                                     </a>
                                     <a href="#" class="list-group-item" id="logiout">
