--- a/personal_profile.html
+++ b/personal_profile.html
@@ -62,66 +62,10 @@
     <!--Demo script [ DEMONSTRATION ]-->
     <script src="js/demo/nifty-demo.min.js"></script>
 
-
-    <!--Bootstrap Table Sample [ SAMPLE ]-->
-    <script src="js/demo/tables-bs-table.js"></script>
-
-
-    <!--X-editable [ OPTIONAL ]-->
-    <script src="plugins/x-editable/js/bootstrap-editable.min.js"></script>
-
-
-    <!--Bootstrap Table [ OPTIONAL ]-->
-    <script src="plugins/bootstrap-table/bootstrap-table.min.js"></script>
-
-
-    <!--Bootstrap Table Extension [ OPTIONAL ]-->
-    <script src="plugins/bootstrap-table/extensions/editable/bootstrap-table-editable.js"></script>
-
-    <!--Summernote [ OPTIONAL ]-->
-    <script src="plugins/summernote/summernote.min.js"></script>
-    <!--=================================================-->
-    <!--Form File Upload [ SAMPLE ]-->
-    <script src="js/demo/form-text-editor.js"></script>
-    <!--Demo script [ DEMONSTRATION ]-->
-
-    <!--Dropzone [ OPTIONAL ]-->
-    <script src="plugins/dropzone/dropzone.min.js"></script>
-
-
-
-
 <script src="js/atits_pc_js/personal_profile.js"></script>
 
 
 
-
-
-<!--=================================================
-
-    REQUIRED
-    You must include this in your project.
-
-
-    RECOMMENDED
-    This category must be included but you may modify which plugins or components which should be included in your project.
-
-
-    OPTIONAL
-    Optional plugins. You may choose whether to include it in your project or not.
-
-
-    DEMONSTRATION
-    This is to be removed, used for demonstration purposes only. This category must not be included in your project.
-
-
-    SAMPLE
-    Some script samples which explain how to initialize plugins or components. This category should not be included in your project.
-
-
-    Detailed information and more samples can be found in the document.
-
-    =================================================-->
 <link id="theme" href="css/themes/type-a/theme-dark.min.css" rel="stylesheet">
 
 
@@ -192,7 +136,7 @@
                             <a href="javascript:history.go(-1)">
                                     <button class="btn btn-default" id="close" type="submit">返回</button>
                             </a>
-                            <a href="personal_add.html">
+                            <a href="#" id="personal_add" >
                                     <button class="btn btn-default" id="close" type="submit">修改</button>
                             </a>
                      </div>
@@ -433,8 +377,11 @@
                                                     </a>
                                                 </div>
                                                 <div id="profile-nav" class="collapse list-group bg-trans">
-                                                    <a href="personal_profile.html" class="list-group-item">
+                                                    <a href="#" class="list-group-item" id="personal_profile">
                                                         <i class="demo-pli-male icon-lg icon-fw"></i> 个人中心
+                                                    </a>
+                                                    <a href="#" class="list-group-item" id="sys_control">
+                                                        <i class="demo-pli-gear icon-lg icon-fw"></i> 体系管理
                                                     </a>
                                                     <a href="#" class="list-group-item" id="lab_control">
                                                         <i class="demo-pli-gear icon-lg icon-fw"></i> 研究室管理
@@ -442,7 +389,7 @@
                                                     <a href="#" class="list-group-item" id="sta_control">
                                                         <i class="demo-pli-gear icon-lg icon-fw"></i> 实验站管理
                                                     </a>
-                                                    <a href="#" class="list-group-item">
+                                                    <a href="help.html" class="list-group-item">
                                                         <i class="demo-pli-information icon-lg icon-fw"></i> 帮助
                                                     </a>
                                                     <a href="#" class="list-group-item" id="logiout">
