--- a/personal_add.html
+++ b/personal_add.html
@@ -232,7 +232,7 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="demo-is-inputnormal" class="col-sm-5 control-label">名族</label>
+                                        <label for="demo-is-inputnormal" class="col-sm-5 control-label">民族</label>
                                         <div class="col-sm-4">
                                             <input class="form-control" id="nation" name="profile.nation">
                                         </div>
@@ -411,7 +411,7 @@
                                                 <label for="demo-is-inputnormal" class="col-sm-4 control-label">功能研究室名称</label>
                                                 <div class="col-sm-4">
                                                         <select class="form-control" id="laboratoryName" name="laboratoryName">
-                                                                <option value= "0"> </option>
+                                                                <option value="0"> </option>
                                                         
                                                         </select>
                                                 </div>
