--- a/personal_profile.html
+++ b/personal_profile.html
@@ -177,7 +177,7 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="demo-is-inputnormal" class="col-sm-5 control-label">名族</label>
+                                        <label for="demo-is-inputnormal" class="col-sm-5 control-label">民族</label>
                                         <div class="col-sm-4">
                                             <span class="form-control" id="nation"></span>
                                         </div>
